# cmake-template

./: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: base.cppm.76A38DC7D0C445FB.idx  main.cpp.0982CD3F4608C708.idx  simple.cpp.37FB0F3729AF4105.idx  simple.h.34852493DF0FD241.idx
app/: CMakeLists.txt
app/src/: main.cpp
libs/core/: CMakeLists.txt
libs/core/include/corelib/: simple.h  simple.hpp
libs/core/src/: simple.cpp
libs/core/tests/: test_add.cpp
